udemy/kubernetes/kubernetes-completo/ingress/ingress-tls.yaml
# Um dos maiores poderes do Ingress é centralizar a gestão de certificados de segurança. Se você tivesse 50 microsserviços, gerenciar e renovar 50 certificados SSL dentro de cada container seria inviável.

# O Ingress permite fazer a "Terminação TLS". O tráfego vem criptografado do cliente até a porta do Ingress. O Ingress descriptografa o tráfego usando o certificado, aplica as regras de roteamento que vimos acima e envia o tráfego em texto claro (HTTP normal) para a rede interna do cluster. Como a rede interna é isolada e segura, retiramos o peso do processamento de criptografia dos pods da aplicação.

# Para fazer isso, criamos um Secret do tipo tls contendo o certificado e a chave, e fazemos uma leve modificação no arquivo do Ingress.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
spec:
  # Bloco exclusivo para gerenciar a criptografia
  tls:
  - hosts:
    - sistema.archsoft.com.br
    # O K8s vai buscar o certificado guardado neste cofre
    secretName: archsoft-tls-secret 
    
  rules:
  - host: sistema.archsoft.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sistema-svc
            port:
              number: 80
